[package]
name = "Claudia"
version = "0.1.0"
edition = "2021"
authors = ["Charles Lee"]
description = "Automate Claude task execution from Markdown files"
license = "MIT"

[[bin]]
name = "claudia"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
ctrlc = "3.4"
portable-pty = "0.8"
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"